syntax = "proto3";

option go_package = "github.com/yuansl/playground/x/api/rpc/proto";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

service Account {
  rpc ListUser(UserRequest) returns (UserResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }
}

message UserRequest {
  uint64 uid = 1;
}

message User {
  string name = 1;
  int32 age = 2;
  string address = 4;
  string id = 3;
}

message error {
  int64 code =1;
  string message = 2;
}

message UserResponse {
  repeated User result = 1;
  optional error error = 2;
}
